[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/UI_Font_30.tres" type="Theme" id=1]
[ext_resource path="res://Sprites/UI/Main/ItemTooltip/NamePanel.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/Main/ItemTooltip/TooltipBorder.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/Main/ItemTooltip/TooltipBack.png" type="Texture" id=4]
[ext_resource path="res://Scripts/UI/Inventory/ItemTooltip.gd" type="Script" id=5]
[ext_resource path="res://Sprites/UI/Main/ItemTooltip/Divider.png" type="Texture" id=6]
[ext_resource path="res://Resources/UI_Font_22.tres" type="Theme" id=7]

[node name="ItemTooltip" type="Control"]
modulate = Color( 1, 1, 1, 0.882353 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 267.0
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Tooltip"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderT" type="TextureRect" parent="Tooltip"]
anchor_right = 1.0
margin_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderR" type="TextureRect" parent="Tooltip"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderB" type="TextureRect" parent="Tooltip"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_right = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderL" type="TextureRect" parent="Tooltip"]
anchor_bottom = 1.0
margin_right = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NamePanel" type="TextureRect" parent="Tooltip"]
anchor_right = 1.0
margin_right = 1.0
margin_bottom = 31.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Tooltip"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Tooltip/VBoxContainer"]
margin_right = 267.0
margin_bottom = 36.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "ITEM_NAME"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemLevel" type="Label" parent="Tooltip/VBoxContainer"]
margin_top = 36.0
margin_right = 267.0
margin_bottom = 63.0
rect_min_size = Vector2( 0, 19 )
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.72549, 0.72549, 0.72549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Type" type="Label" parent="Tooltip/VBoxContainer"]
margin_top = 63.0
margin_right = 267.0
margin_bottom = 99.0
rect_min_size = Vector2( 0, 19 )
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.72549, 0.72549, 0.72549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainStat" type="RichTextLabel" parent="Tooltip/VBoxContainer"]
visible = false
margin_top = 99.0
margin_right = 267.0
margin_bottom = 136.0
theme = ExtResource( 1 )
custom_colors/default_color = Color( 0.72549, 0.72549, 0.72549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Requirements" type="RichTextLabel" parent="Tooltip/VBoxContainer"]
visible = false
margin_top = 136.0
margin_right = 267.0
margin_bottom = 173.0
theme = ExtResource( 1 )
custom_colors/default_color = Color( 0.72549, 0.72549, 0.72549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Divider" type="TextureRect" parent="Tooltip/VBoxContainer"]
visible = false
margin_top = 36.0
margin_right = 267.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 2 )
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Implicit" type="Label" parent="Tooltip/VBoxContainer"]
visible = false
margin_top = 145.0
margin_right = 267.0
margin_bottom = 181.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.603922, 0.580392, 0.933333, 1 )
text = "IMPLICIT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Divider2" type="TextureRect" parent="Tooltip/VBoxContainer"]
visible = false
margin_top = 36.0
margin_right = 267.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 2 )
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
